# vast-shell

./: .gitignore  .gitmodules  .golangci.yml  .qmlformat.ini  Greeter.qml  README.md  TranslationManager.qml  archInstall.sh  col.sh  flake.nix  qmlfmt.sh  shell.nix  shell.qml
.github/workflows/: ci-archinstall.yml  ci-cachix.yml  ci-flake-update.yml  ci-formatter.yml  ci-nix-build.yml
Assets/: formatting.py  formatting.sh  generate_colors.sh  keystate.py  lucide.json  screen-capture.sh  session.sh
Assets/go/: audioProfiles  audioProfiles.go  formatting  formatting.go  keystate  keystate-bin  keystate.go  screen-capture  screen-capture.go
Assets/shaders/: Corner.frag.qsb  ImageTransition.frag  ImageTransition.frag.qsb  ImageTransition.vert  ImageTransition.vert.qsb  OuterRoundedCorner.frag  borderProgress.frag  borderProgress.frag.qsb  borderProgress.vert  borderProgress.vert.qsb  waveForm.frag  waveForm.frag.qsb  waveForm.vert  waveForm.vert.qsb  wavy.frag  wavy.frag.qsb
Assets/shell/: battery_health.sh  create-thumbnails.sh  extract-fg.sh  screen-capture.sh  wrap_term_launch.sh
Components/: CAnim.qml  Circular.qml  Corner.qml  Cornery.qml  DialogBox.qml  Elevation.qml  LoadingIndicator.qml  NAnim.qml  OuterRoundedCorner.qml  OuterShape.qml  OuterShapeItem.qml  Progress.qml  StyledButton.qml  StyledComboBox.qml  StyledLabel.qml  StyledMenu.qml  StyledMenuItem.qml  StyledPopup.qml  StyledRect.qml  StyledSlide.qml  StyledSwitch.qml  StyledText.qml  StyledTextField.qml  StyledTextInput.qml  TabColumn.qml  TabRow.qml  Toast.qml  Wallpaper.qml  Wavy.qml
Components/Base/: CAnim.qml  Elevation.qml  FocusCage.qml  NAnim.qml  StyledButton.qml  StyledComboBox.qml  StyledMenu.qml  StyledMenuItem.qml  StyledPopup.qml  StyledRect.qml  StyledSlide.qml  StyledSwitch.qml  StyledText.qml  StyledTextField.qml  StyledTextInput.qml  TabColumn.qml  TabRow.qml  Wallpaper.qml  Wavy.qml
Components/Dialog/: DialogBox.qml
Components/Feedback/: BorderProgress.qml  LoadingIndicator.qml  Progress.qml  Toast.qml
Components/FileDialog/: FileDialog.qml
Configs/: Appearance.qml  AppearanceConfig.qml  BarConfig.qml  ColorSystemConfig.qml  Configs.qml  General.qml  GeneralConfig.qml  Localization.qml  LocalizationConfig.qml  NotificationConfig.qml  Themes.qml  Wallpaper.qml  WallpaperConfig.qml  Weather.qml  WeatherConfig.qml  colors.json
Core/Configs/: Appearance.qml  AppearanceConfig.qml  BarConfig.qml  ClipboardConfig.qml  ColorSystemConfig.qml  Configs.qml  GeneralConfig.qml  MediaPlayerConfig.qml  ScreenRecorderConfig.qml  WallpaperConfig.qml  WeatherConfig.qml
Core/States/: GlobalStates.qml  Workspaces.qml
Core/Utils/: Dots.qml  Fuzzy.qml  HighlightText.qml  Icon.qml  Log.qml  Paths.qml  ScreenSelection.qml  TimeAgo.qml  WeatherIcon.qml
Data/: Appearance.qml  AppearanceConfig.qml  Audio.qml  AudioProfiles.qml  Battery.qml  Brightness.qml  Colors.qml  Configs.qml  Hyprsunset.qml  KeyLockState.qml  NetworkManager.qml  Notifs.qml  Paths.qml  SysUsage.qml  Themes.qml  Time.qml  TimeAgo.qml  Wallpaper.qml  Weather.qml  colors.json  configurations.json
Data/matugen/: colors-dark.json  colors-light.json  dark-colors.json  light-colors.json  matugen.toml
Greeter/: Greeter.qml  Sessions.qml  Users.qml
Helpers/: DistroAscii.qml  Dots.qml  Fuzzy.qml  GlobalStates.qml  HighlightText.qml  Icon.qml  Lucide.qml  MArea.qml  MatIcon.qml  MaterialIcon.qml  Paths.qml  ScreenSelection.qml  ShapeCanvas.qml  Time.qml  TimeAgo.qml  Workspaces.qml
Modules/: Wrapper.qml
Modules/Bar/: Bar.qml  Left.qml  Middle.qml  Right.qml
Modules/BigClock/: Clock.qml
Modules/Calendar/: Calendar.qml
Plugins/Vast/: AudioDevicesModel.cpp  AudioDevicesModel.hpp  AudioDevicesWatcher.cpp  AudioDevicesWatcher.hpp  AudioProfilesModel.cpp  AudioProfilesModel.hpp  AudioProfilesWatcher.cpp  AudioProfilesWatcher.hpp  BrightnessManager.cpp  BrightnessManager.hpp  CMakeLists.txt  ImageCache.cpp  ImageCache.hpp  KeylockState.cpp  KeylockState.hpp  LyricsProvider.cpp  LyricsProvider.hpp  ScreenRecorder.cpp  ScreenRecorder.hpp  TranslationManager.hpp  WallpaperImageProvider.cpp  WallpaperImageProvider.hpp
Plugins/Vast/Clipboard/: ClipboardDatabase.cpp  ClipboardDatabase.hpp  ClipboardEntry.hpp  ClipboardManager.cpp  ClipboardManager.hpp  ClipboardModel.cpp  ClipboardModel.hpp  ClipboardWatcher.cpp  ClipboardWatcher.hpp
Plugins/Vast/Search/: FileProvider.cpp  FileProvider.hpp  FuzzyMatcher.cpp  FuzzyMatcher.hpp  SearchEngine.cpp  SearchEngine.hpp  SearchResult.cpp  SearchResult.hpp
Qml/: shell.qml
Services/: Audio.qml  Battery.qml  Brightness.qml  CalendarMajorEvents.qml  Colours.qml  DepthWallpaperController.qml  Fontlist.qml  Hotspot.qml  Hypr.qml  Hyprsunset.qml  KDEConnect.qml  KeyLockState.qml  KeylockState.qml  Lyrics.qml  Mango.qml  Mpris.qml  Network.qml  Notifs.qml  Players.qml  PolAgent.qml  Privacy.qml  Record.qml  ScreenCapture.qml  ScreenCaptureHistory.qml  SystemUsage.qml  ToastService.qml  WallpaperFileModels.qml  Weather.qml  Wifi.qml  http.js
Widgets/: AudioProfiles.qml  Battery.qml  Clock.qml  ControlCenter.qml  LyricsView.qml  Menu.qml  MixerEntry.qml  Mpris.qml  NotificationDots.qml  OsText.qml  PowerProfiles.qml  RecordControl.qml  RecordIndicator.qml  Sound.qml  Tray.qml  TrayMenu.qml  WallpaperSwitcher.qml  WorkspaceName.qml  Workspaces.qml
nix/: AnotherRipple.nix  app2unit.nix  audioProfiles.nix  default.nix  go-scripts.nix  hm-modules.nix  keylockState.nix  keystate.nix  m3Shapes.nix  material-symbols.nix  nixos-modules.nix  qmlMaterial.nix  qmlfmt.nix  translationManager.nix  vastPlugin.nix
patches/: qmlfmt-pty-unix-include.patch  qt-creator-missing-header.patch
plugins/AudioProfiles/: AudioProfilesModel.cpp  AudioProfilesModel.h  AudioProfilesWatcher.cpp  AudioProfilesWatcher.h  CMakeLists.txt
plugins/KeylockState/: CMakeLists.txt  KeylockState.cpp  KeylockState.h
plugins/TranslationManager/: CMakeLists.txt  TranslationManager.cpp  TranslationManager.h  TranslationManager.qml  qmldir
translations/: app_id.qm  app_id.ts  id_ID.qm  id_ID.ts
vastctl/: go.mod  main.go
(+406 files in other folders)
